--- a/src/components/docs/theme.mdx
+++ b/src/components/docs/theme.mdx
@@ -136,3 +136,75 @@ export default {
   },
 };
 ```
+
+## Spacing
+
+| Name     | Space       | Pixels |                                             |
+| -------- | ----------- | ------ | ------------------------------------------- |
+| w-0      | 0px         | 0px    | <div className="bg-pink-200 h-4 w-0" />     |
+| w-px     | 1px         | 1px    | <div className="bg-pink-200 h-4 w-px" />    |
+| w-0.5    | 0.125rem    | 2px    | <div className="bg-pink-200 h-4 w-0.5" />   |
+| w-1      | 0.25rem     | 4px    | <div className="bg-pink-200 h-4 w-1" />     |
+| w-1.5    | 0.375rem    | 6px    | <div className="bg-pink-200 h-4 w-1.5" />   |
+| w-2      | 0.5rem      | 8px    | <div className="bg-pink-200 h-4 w-2" />     |
+| w-2.5    | 0.625rem    | 10px   | <div className="bg-pink-200 h-4 w-2.5" />   |
+| w-3      | 0.75rem     | 12px   | <div className="bg-pink-200 h-4 w-3" />     |
+| w-3.5    | 0.875rem    | 14px   | <div className="bg-pink-200 h-4 w-3.5" />   |
+| w-4      | 1rem        | 16px   | <div className="bg-pink-200 h-4 w-4" />     |
+| w-5      | 1.25rem     | 20px   | <div className="bg-pink-200 h-4 w-5" />     |
+| w-6      | 1.5rem      | 24px   | <div className="bg-pink-200 h-4 w-6" />     |
+| w-7      | 1.75rem     | 28px   | <div className="bg-pink-200 h-4 w-7" />     |
+| w-8      | 2rem        | 32px   | <div className="bg-pink-200 h-4 w-8" />     |
+| w-9      | 2.25rem     | 36px   | <div className="bg-pink-200 h-4 w-9" />     |
+| w-10     | 2.5rem      | 40px   | <div className="bg-pink-200 h-4 w-10" />    |
+| w-11     | 2.75rem     | 44px   | <div className="bg-pink-200 h-4 w-11" />    |
+| w-12     | 3rem        | 48px   | <div className="bg-pink-200 h-4 w-12" />    |
+| w-14     | 3.5rem      | 56px   | <div className="bg-pink-200 h-4 w-14" />    |
+| w-16     | 4rem        | 64px   | <div className="bg-pink-200 h-4 w-16" />    |
+| w-20     | 5rem        | 80px   | <div className="bg-pink-200 h-4 w-20" />    |
+| w-24     | 6rem        | 96px   | <div className="bg-pink-200 h-4 w-24" />    |
+| w-28     | 7rem        | 112px  | <div className="bg-pink-200 h-4 w-28" />    |
+| w-32     | 8rem        | 128px  | <div className="bg-pink-200 h-4 w-32" />    |
+| w-36     | 9rem        | 144px  | <div className="bg-pink-200 h-4 w-36" />    |
+| w-40     | 10rem       | 160px  | <div className="bg-pink-200 h-4 w-40" />    |
+| w-44     | 11rem       | 176px  | <div className="bg-pink-200 h-4 w-44" />    |
+| w-48     | 12rem       | 192px  | <div className="bg-pink-200 h-4 w-48" />    |
+| w-52     | 13rem       | 208px  | <div className="bg-pink-200 h-4 w-52" />    |
+| w-56     | 14rem       | 224px  | <div className="bg-pink-200 h-4 w-56" />    |
+| w-60     | 15rem       | 240px  | <div className="bg-pink-200 h-4 w-60" />    |
+| w-64     | 16rem       | 256px  | <div className="bg-pink-200 h-4 w-64" />    |
+| w-72     | 18rem       | 288px  | <div className="bg-pink-200 h-4 w-72" />    |
+| w-80     | 20rem       | 320px  | <div className="bg-pink-200 h-4 w-80" />    |
+| w-96     | 24rem       | 384px  | <div className="bg-pink-200 h-4 w-96" />    |
+| w-auto   | auto        | -      | <div className="bg-pink-200 h-4 w-auto" />  |
+| w-1/2    | 50%         | -      | <div className="bg-pink-200 h-4 w-1/2" />   |
+| w-1/3    | 33.333333%  | -      | <div className="bg-pink-200 h-4 w-1/3" />   |
+| w-2/3    | 66.666667%  | -      | <div className="bg-pink-200 h-4 w-2/3" />   |
+| w-1/4    | 25%         | -      | <div className="bg-pink-200 h-4 w-1/4" />   |
+| w-2/4    | 50%         | -      | <div className="bg-pink-200 h-4 w-2/4" />   |
+| w-3/4    | 75%         | -      | <div className="bg-pink-200 h-4 w-3/4" />   |
+| w-1/5    | 20%         | -      | <div className="bg-pink-200 h-4 w-1/5" />   |
+| w-2/5    | 40%         | -      | <div className="bg-pink-200 h-4 w-2/5" />   |
+| w-3/5    | 60%         | -      | <div className="bg-pink-200 h-4 w-3/5" />   |
+| w-4/5    | 80%         | -      | <div className="bg-pink-200 h-4 w-4/5" />   |
+| w-1/6    | 16.666667%  | -      | <div className="bg-pink-200 h-4 w-1/6" />   |
+| w-2/6    | 33.333333%  | -      | <div className="bg-pink-200 h-4 w-2/6" />   |
+| w-3/6    | 50%         | -      | <div className="bg-pink-200 h-4 w-3/6" />   |
+| w-4/6    | 66.666667%  | -      | <div className="bg-pink-200 h-4 w-4/6" />   |
+| w-5/6    | 83.333333%  | -      | <div className="bg-pink-200 h-4 w-5/6" />   |
+| w-1/12   | 8.333333%   | -      | <div className="bg-pink-200 h-4 w-1/12" />  |
+| w-2/12   | 16.666667%  | -      | <div className="bg-pink-200 h-4 w-2/12" />  |
+| w-3/12   | 25%         | -      | <div className="bg-pink-200 h-4 w-3/12" />  |
+| w-4/12   | 33.333333%  | -      | <div className="bg-pink-200 h-4 w-4/12" />  |
+| w-5/12   | 41.666667%  | -      | <div className="bg-pink-200 h-4 w-5/12" />  |
+| w-6/12   | 50%         | -      | <div className="bg-pink-200 h-4 w-6/12" />  |
+| w-7/12   | 58.333333%  | -      | <div className="bg-pink-200 h-4 w-7/12" />  |
+| w-8/12   | 66.666667%  | -      | <div className="bg-pink-200 h-4 w-8/12" />  |
+| w-9/12   | 75%         | -      | <div className="bg-pink-200 h-4 w-9/12" />  |
+| w-10/12  | 83.333333%  | -      | <div className="bg-pink-200 h-4 w-10/12" /> |
+| w-11/12  | 91.666667%  | -      | <div className="bg-pink-200 h-4 w-11/12" /> |
+| w-full   | 100%        | -      | <div className="bg-pink-200 h-4 w-full" />  |
+| w-screen | 100vw       | -      | <div className="bg-pink-200 h-4 w-full" />  |
+| w-min    | min-content | -      | <div className="bg-pink-200 h-4 w-min" />   |
+| w-max    | max-content | -      | <div className="bg-pink-200 h-4 w-max" />   |
+| w-fit    | fit-content | -      | <div className="bg-pink-200 h-4 w-fit" />   |
