add introduction doc

--- a/src/docs/theme.mdx
+++ b/src/docs/theme.mdx
@@ -2,7 +2,7 @@ import { Meta } from "@storybook/addon-docs";
 
 import { Palette } from "./components";
 
-<Meta title="UI Docs / Theme" description="The default theme." />
+<Meta title="Docs / Theme" description="The default theme." />
 
 # Theme
 
